# local_llm

./: .gitignore  README.md  code_exec.py  model.py  notes.txt  pyproject.toml  run_model.py  server.py  store.py  tools.py
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/api/chat/: route.ts
frontend/components/: agent-console.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx  textarea.tsx
prompts/: system.md
